; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_ClearOrSaveResult.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_common.c_ClearOrSaveResult.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @ClearOrSaveResult to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ClearOrSaveResult(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %20

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @PQresultStatus(i32* %6)
  switch i32 %7, label %16 [
    i32 128, label %8
    i32 129, label %8
  ]

8:                                                ; preds = %5, %5
  %9 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %8
  %12 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %13 = call i32 @PQclear(i32* %12)
  br label %14

14:                                               ; preds = %11, %8
  %15 = load i32*, i32** %2, align 8
  store i32* %15, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  br label %19

16:                                               ; preds = %5
  %17 = load i32*, i32** %2, align 8
  %18 = call i32 @PQclear(i32* %17)
  br label %19

19:                                               ; preds = %16, %14
  br label %20

20:                                               ; preds = %19, %1
  ret void
}

declare dso_local i32 @PQresultStatus(i32*) #1

declare dso_local i32 @PQclear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
